--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-
     compile 'com.github.bumptech.glide:glide:3.9.0-SNAPSHOT'
     compile 'com.github.bumptech.glide:okhttp-integration:1.6.0-SNAPSHOT'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
