--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
@@ -45,6 +44,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+    testCompile 'org.mockito:mockito-core:2.8.47'
+    testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
 
 
