--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
     testCompile 'org.mockito:mockito-core:2.8.47'
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
 
 
