--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "edmanfeng.paddamagecalculator"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,21 +32,21 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.github.bumptech.glide:glide:3.9.0-SNAPSHOT'
-    compile 'com.github.bumptech.glide:okhttp-integration:1.6.0-SNAPSHOT'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
-    testCompile 'org.mockito:mockito-core:2.8.47'
-    testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
-    compile 'com.android.support:design:26.0.0-alpha1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    implementation 'com.github.bumptech.glide:glide:3.9.0-SNAPSHOT'
+    implementation 'com.github.bumptech.glide:okhttp-integration:1.6.0-SNAPSHOT'
+    implementation 'com.google.firebase:firebase-database:10.0.1'
+    androidTestImplementation 'com.google.code.findbugs:jsr305:3.0.1'
+    testImplementation 'org.mockito:mockito-core:2.8.47'
+    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
+    implementation 'com.android.support:design:26.0.0-alpha1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
 }
 
 
