--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "edmanfeng.paddamagecalculator"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,16 +37,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
     implementation 'com.github.bumptech.glide:glide:3.9.0-SNAPSHOT'
     implementation 'com.github.bumptech.glide:okhttp-integration:1.6.0-SNAPSHOT'
     implementation 'com.google.firebase:firebase-database:10.0.1'
     androidTestImplementation 'com.google.code.findbugs:jsr305:3.0.1'
     testImplementation 'org.mockito:mockito-core:2.8.47'
     testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
-    implementation 'com.android.support:design:26.0.0-alpha1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
+
 }
 
 
